@@ -1,3 +1,7 @@
+2014-10-10  Kirill Yukhin  <kirill.yukhin@intel.com>
+
+	* gcc.target/i386/pr63600.c: New.
+
 2014-10-23  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* gcc.dg/ipa/ipa-icf-21.c: Add -msse2 to dg-options.
